seal UnityComponentControl, use UnityValueControl in a lot more places, let make UnityValueControl a IValueObservable
